--- a/SmartSales/app/src/main/res/values/strings.xml
+++ b/SmartSales/app/src/main/res/values/strings.xml
@@ -24,5 +24,9 @@
     <string name="comparing">COMPARING</string>
     <string name="catalog">CATALOG</string>
     <string name="performance">PERFORMANCE</string>
+    <string name="title_activity_brand_story">BrandStory</string>
+    <string name="title_activity_nde">NDE</string>
+    <string name="title_activity_message_board">MessageBoard</string>
+    <string name="title_activity_consultation">Consultation</string>
 
 </resources>
