--- a/SmartSales/app/src/main/res/values/strings.xml
+++ b/SmartSales/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="title_activity_nde">NDE</string>
     <string name="title_activity_message_board">MessageBoard</string>
     <string name="title_activity_consultation">Consultation</string>
+    <string name="brand_story">HYUNDAI MOTOR BRAND STORY</string>
 
 </resources>
