--- a/SmartSales/app/src/main/res/values/strings.xml
+++ b/SmartSales/app/src/main/res/values/strings.xml
@@ -36,7 +36,6 @@
     <string name="update_started">Standby</string>
     <string name="update_fetching">Downloading...</string>
     <string name="update_lately_version">All data has been updated</string>
-
     <string name="survey_text1">1. Did your dealer fully answer your questions kindly?</string>
     <string name="survey_text2">2. Do you think your dealer gave you enough car information?</string>
     <string name="survey_text3">3. Do you think this tablet app was helpful getting car information?</string>
@@ -55,5 +54,7 @@
     <string name="model">Enter Model Name</string>
     <string name="model_of">\t\t\t\tModel Of Interest</string>
     <string name="age">Age</string>
+    <string name="input_pencil">Please write using a tablet pen</string>
+    <string name="title_activity_car_details">CarDetails</string>
 
 </resources>
