Style interior hotspot and list view color

--- a/SmartSales/app/src/main/res/values/strings.xml
+++ b/SmartSales/app/src/main/res/values/strings.xml
@@ -70,5 +70,6 @@
     <string name="discount">DISCOUNT</string>
     <string name="email2">Email</string>
     <string name="total_price">Total Price</string>
+    <string name="brand_story_heading">HYUNDAI MOTOR BRAND STORY</string>
 
 </resources>
