--- a/SmartSales/app/src/main/res/values/strings.xml
+++ b/SmartSales/app/src/main/res/values/strings.xml
@@ -22,9 +22,9 @@
     <string name="brochure">BROCHURE</string>
     <string name="estimate">ESTIMATE</string>
     <string name="comparing">COMPARING</string>
-    <string name="catalog">CATALOG</string>
+    <string name="catalog">CATALOGUE</string>
     <string name="performance">PERFORMANCE</string>
-    <string name="title_activity_brand_story">BrandStory</string>
+    <string name="title_activity_brand_story">Brand Story</string>
     <string name="title_activity_nde">NDE</string>
     <string name="title_activity_message_board">MessageBoard</string>
     <string name="title_activity_consultation">Consultation</string>
